blog-legacy/infra/k8s/posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-posts
  template:
    metadata:
      labels:
        app: pod-posts
    spec:
      containers:
        - name: microservice-node-blog-legacy-posts
          image: rmc3408/microservice-node-blog-legacy-posts:0.0.3

---
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  type: NodePort
  selector:
    app: pod-posts
  ports:
    - name: posts-srv-port
      protocol: TCP
      port: 4000
      targetPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: posts-service-cluster
spec:
  type: ClusterIP
  selector:
    app: pod-posts
  ports:
    - name: posts-srv-cluster-port
      protocol: TCP
      port: 4000
      targetPort: 4000
